--- a/src/index.less
+++ b/src/index.less
@@ -17,9 +17,11 @@ html, body {
   width: 100%;
   height: 100%;
   display: flex;
+  overflow: hidden;
 }
 
 .sidebar {
+  flex: 0 0 auto;
   width: 200px;
   height: 100%;
   box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .2);
@@ -55,7 +57,7 @@ html, body {
 }
 
 .content {
-  flex: 1;
+  flex: 1 1 auto;
 
   &-wrapper {
     width: 100%;
